<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.kangs.guestapp.Guest_Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <android.support.v7.widget.SearchView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" >
            </android.support.v7.widget.SearchView>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/map"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/btnGuestSearchDate"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:id="@+id/btnGuestSearchGuest"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/btnGuestSearchType"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvGuestSearchFood">
        </ListView>

    </LinearLayout>
</FrameLayout>
